--- a/KJStrudy/CollectionStoryboard.storyboard
+++ b/KJStrudy/CollectionStoryboard.storyboard
@@ -119,16 +119,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zvX-4p-OtU">
+                            <imageView opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zvX-4p-OtU">
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="zvX-4p-OtU" firstAttribute="leading" secondItem="xqx-Vm-bM7" secondAttribute="leading" id="3BI-zP-zBb"/>
-                            <constraint firstItem="zvX-4p-OtU" firstAttribute="top" secondItem="lz3-Y0-1Vd" secondAttribute="bottom" id="6fU-8h-mzJ"/>
-                            <constraint firstItem="zvX-4p-OtU" firstAttribute="bottom" secondItem="lF4-Ev-kGJ" secondAttribute="top" id="c1R-Ux-yuy"/>
-                            <constraint firstAttribute="trailing" secondItem="zvX-4p-OtU" secondAttribute="trailing" id="i4T-Cb-JOs"/>
+                            <constraint firstItem="zvX-4p-OtU" firstAttribute="leading" secondItem="xqx-Vm-bM7" secondAttribute="leading" id="3sa-gf-wWZ"/>
+                            <constraint firstItem="zvX-4p-OtU" firstAttribute="top" secondItem="lz3-Y0-1Vd" secondAttribute="bottom" id="5pf-FG-Tyi"/>
+                            <constraint firstAttribute="trailing" secondItem="zvX-4p-OtU" secondAttribute="trailing" id="O9G-rj-W3I"/>
+                            <constraint firstItem="zvX-4p-OtU" firstAttribute="bottom" secondItem="lF4-Ev-kGJ" secondAttribute="top" id="usT-J0-jZM"/>
                         </constraints>
                     </view>
                     <connections>
