--- a/KJStrudy/ActivityTestStoryboard.storyboard
+++ b/KJStrudy/ActivityTestStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="RFg-iw-kOm">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="RFg-iw-kOm">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -75,6 +75,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="containerview" destination="WX3-cn-8er" id="hTU-Uy-Oo6"/>
                         <outlet property="selectTitle" destination="ADa-Ff-LBG" id="d3G-w6-21V"/>
                     </connections>
                 </viewController>
@@ -89,6 +90,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pfF-gq-3NT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="714" y="261"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="CFd-AZ-XKQ">
+            <objects>
+                <viewController storyboardIdentifier="1" id="FK5-tp-lZK" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="9Fa-W6-ASh"/>
+                        <viewControllerLayoutGuide type="bottom" id="YEw-2M-zjd"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="IID-AR-1UQ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="68F-yi-hxX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="714" y="738"/>
         </scene>
     </scenes>
 </document>
