--- a/KJStrudy/ActivityTestStoryboard.storyboard
+++ b/KJStrudy/ActivityTestStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="RFg-iw-kOm">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="RFg-iw-kOm">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -86,7 +86,7 @@
         <!--AV Player View Controller-->
         <scene sceneID="W1c-fm-1Cj">
             <objects>
-                <avPlayerViewController videoGravity="AVLayerVideoGravityResizeAspectFill" id="MDX-h5-oee" sceneMemberID="viewController"/>
+                <avPlayerViewController storyboardIdentifier="2" videoGravity="AVLayerVideoGravityResizeAspectFill" id="MDX-h5-oee" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pfF-gq-3NT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="714" y="261"/>
@@ -107,7 +107,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="68F-yi-hxX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="714" y="738"/>
+            <point key="canvasLocation" x="679" y="726"/>
         </scene>
     </scenes>
 </document>
