--- a/KJStrudy/CollectionStoryboard.storyboard
+++ b/KJStrudy/CollectionStoryboard.storyboard
@@ -1,9 +1,10 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="bIw-yR-ltG">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="bIw-yR-ltG">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Collection View Controller-->
@@ -11,9 +12,9 @@
             <objects>
                 <collectionViewController id="YKz-sU-rct" customClass="CollectionViewController" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="Qxr-h7-c7X">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="wDQ-78-ow3">
                             <size key="itemSize" width="152" height="152"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -22,23 +23,19 @@
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" tag="1" contentMode="center" reuseIdentifier="cell1" id="gxz-GW-beV" customClass="MyCollectionViewCell">
-                                <rect key="frame" x="0.0" y="64" width="152" height="152"/>
+                                <rect key="frame" x="0.0" y="0.0" width="152" height="152"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="152" height="152"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <view clipsSubviews="YES" tag="1" contentMode="center" translatesAutoresizingMaskIntoConstraints="NO" id="2vH-Ko-H14">
-                                            <rect key="frame" x="0.0" y="0.0" width="152" height="152"/>
                                             <subviews>
                                                 <view tag="2" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JwB-5S-DJI">
-                                                    <rect key="frame" x="6" y="6" width="140" height="140"/>
                                                     <subviews>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="standcat" translatesAutoresizingMaskIntoConstraints="NO" id="oJA-Hw-ieO">
-                                                            <rect key="frame" x="0.0" y="0.0" width="140" height="140"/>
-                                                        </imageView>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="standcat" translatesAutoresizingMaskIntoConstraints="NO" id="oJA-Hw-ieO"/>
                                                     </subviews>
-                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
                                                         <constraint firstItem="oJA-Hw-ieO" firstAttribute="leading" secondItem="JwB-5S-DJI" secondAttribute="leading" id="3Cc-ya-os5"/>
                                                         <constraint firstAttribute="trailing" secondItem="oJA-Hw-ieO" secondAttribute="trailing" id="BMn-6j-oBY"/>
@@ -47,7 +44,7 @@
                                                     </constraints>
                                                 </view>
                                             </subviews>
-                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
                                                 <constraint firstItem="JwB-5S-DJI" firstAttribute="top" secondItem="2vH-Ko-H14" secondAttribute="top" constant="6" id="DNg-dG-w8y"/>
                                                 <constraint firstItem="JwB-5S-DJI" firstAttribute="centerX" secondItem="2vH-Ko-H14" secondAttribute="centerX" id="FCY-Bs-RZO"/>
@@ -62,16 +59,14 @@
                                             </userDefinedRuntimeAttributes>
                                         </view>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="KOJI" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SPc-eB-16c">
-                                            <rect key="frame" x="0.0" y="74" width="152" height="78"/>
-                                            <color key="backgroundColor" white="1" alpha="0.31074069656488545" colorSpace="calibratedWhite"/>
+                                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.31074069656488545" colorSpace="custom" customColorSpace="sRGB"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
-                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="SPc-eB-16c" firstAttribute="bottom" secondItem="2vH-Ko-H14" secondAttribute="bottom" id="9i6-rQ-uRu"/>
                                     <constraint firstItem="2vH-Ko-H14" firstAttribute="leading" secondItem="gxz-GW-beV" secondAttribute="leading" id="KvE-Iv-IXh"/>
@@ -116,14 +111,14 @@
                         <viewControllerLayoutGuide type="bottom" id="lF4-Ev-kGJ"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="xqx-Vm-bM7">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zvX-4p-OtU">
-                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                            <imageView opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zvX-4p-OtU">
+                                <frame key="frameInset" minY="64" width="600" height="536"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="zvX-4p-OtU" firstAttribute="leading" secondItem="xqx-Vm-bM7" secondAttribute="leading" id="3sa-gf-wWZ"/>
                             <constraint firstItem="zvX-4p-OtU" firstAttribute="top" secondItem="lz3-Y0-1Vd" secondAttribute="bottom" id="5pf-FG-Tyi"/>
